--- a/index.html
+++ b/index.html
@@ -720,10 +720,10 @@
     const yAxis = d3.axisLeft(y)
       .ticks(5);
 
-    const xAxisG = g.append("g")
-       .attr("class","axis")
-       .attr("transform",`translate(0,${innerHeight})`)
-       .call(xAxis);
+    g.append("g")
+      .attr("class","axis")
+      .attr("transform",`translate(0,${innerHeight})`)
+      .call(xAxis);
 
     g.append("g")
       .attr("class","axis")
@@ -737,9 +737,9 @@
       .attr("font-size",11)
       .text("Frequency");
 
-    xAxisG.append("text")
-      .attr("x", innerWidth / 2)
-      .attr("y", 28)              // distance below the axis ticks
+    g.append("text")
+      .attr("x",innerWidth/2)
+      .attr("y",innerHeight+30)
       .attr("text-anchor","middle")
       .attr("font-size",11)
       .text("Year");
