--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 
     function renderStep2(){
       if(stepIndex2 === -1){
-        caption.text("Note that the values are not to be exactly replicated");
+        caption.text("Initial view: full frequency diagram");
       }else{
         caption.text(steps2[stepIndex2]);
       }
